k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ros2-jazzy-demo
  namespace: production
spec:
  replicas: 1

  selector:
    matchLabels:
      app: ros2-publisher

  template:
    metadata:
      labels:
        app: ros2-publisher

    spec:
      containers:

      - name: ros2-publisher

        image: prodacr001.azurecr.io/ros2-jazzy-demo

        imagePullPolicy: Always

        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"

        readinessProbe:
            exec:
                  command:
                      - ros2
                      - topic
                      - list
            initialDelaySeconds: 20
            periodSeconds: 10

        livenessProbe:
             exec:
                  command:
                  - ros2
                  - topic
                  - list
             initialDelaySeconds: 30
             periodSeconds: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
