k8s/service.yaml

apiVersion: v1
kind: Service

metadata:
  name: ros2-service
  namespace: production

spec:
  selector:
    app: ros2-publisher

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
