k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ros2-ingress

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - 20.253.93.207.nip.io
      secretName: ros2-tls

  rules:
    - host: 20.253.93.207.nip.io

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: ros2-service

                port:
                  number: 80
